01_kubernetes_manifest/06_frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conference-app-frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: conferenceapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
